# omnistate

./: .env.example  .gitignore  AUDIT_EXECUTIVE_SUMMARY.md  AUDIT_INDEX.md  AUDIT_SUMMARY.txt  CHANGELOG.md  Cargo.toml  DOMAIN_B_AUDIT.csv  DOMAIN_B_QUICK_REFERENCE.txt  LICENSE  README.md  README_AUDIT.md  ROADMAP.md  eslint.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  usecases.matrix.json
.github/workflows/: ci.yml  monorepo-ci.yml  release.yml
apps/android/: index.js  metro.config.js  package.json
apps/android/android/app/src/main/: AndroidManifest.xml
apps/android/android/app/src/main/java/com/omnistate/: MainActivity.kt  MainApplication.kt  OmniPackage.kt
apps/android/android/app/src/main/res/values/: strings.xml
apps/android/android/app/src/main/res/xml/: accessibility_service_config.xml
apps/android/ios/: .xcode.env  Podfile  README.md
apps/android/ios/OmniState/: AppDelegate.mm  main.m
apps/android/ios/OmniState/Images.xcassets/AppIcon.appiconset/: Contents.json
apps/android/src/engine/: action-executor.ts  index.ts  intent-parser.ts  macro.ts  types.ts  vision-client.ts
apps/android/src/native/: AccessibilityModule.ts  CameraCapture.ts  index.ts
apps/android/src/navigation/: AppNavigator.tsx
apps/android/src/screens/: ChatScreen.tsx  ConnectScreen.tsx  DashboardScreen.tsx  MacroEditorScreen.tsx  SettingsScreen.tsx  TriggersScreen.tsx
apps/android/src/stores/: connection-store.ts  macro-store.ts
apps/macos/: build-and-open-app.sh  build-web.sh
apps/macos/OmniState/: Makefile  Package.swift  generate-project.sh  project.yml  run-dev.sh
apps/macos/OmniState/OmniState/: AppDelegate.swift  Info.plist  OmniState.entitlements  OmniStateApp.swift
apps/macos/OmniState/OmniState/Resources/web-dist/: index.html
apps/macos/OmniState/OmniState/Resources/web-dist/assets/: index-6ui9thHJ.js  index-BQwaGCBp.css  index-Dwlzc0UG.css  index-hl0YfRpE.js
apps/macos/OmniState/OmniState/Services/: DeviceManager.swift  GatewayManager.swift  GatewaySocketClient.swift  GlobalEventMonitor.swift  HealthChecker.swift  HotkeyManager.swift  NativeWakeWordService.swift  NetworkMonitor.swift  NotificationBridge.swift  OmniStateSchemeHandler.swift  PermissionBootstrapper.swift  VoiceCaptureService.swift
apps/macos/OmniState/OmniState/Views/: BoundingBoxOverlay.swift  ContentView.swift  HUDInputWindow.swift  ListeningBubbleWindow.swift  MenuBarView.swift  ScreenTreeView.swift  WakeOnboardingView.swift  WebViewContainer.swift
apps/mobile/: App.tsx  package.json  tsconfig.json
apps/mobile/android/app/src/main/res/values/: styles.xml
apps/mobile/ios/OmniState/: AppDelegate.h  Info.plist  LaunchScreen.storyboard
apps/mobile/ios/OmniState.xcodeproj/: project.pbxproj
apps/mobile/src/engine/: mirror-source.ts
apps/mobile/src/native/: AppManagerModule.ts  AudioRecorder.ts  CameraCapture.ts  OverlayModule.ts  ScreenCaptureModule.ts  index.ts
apps/mobile/src/profiles/: base-profile.ts  index.ts  messenger.ts
apps/mobile/src/screens/: AutomationScreen.tsx  LivePreviewScreen.tsx  VoiceScreen.tsx
apps/mobile/src/stores/: automation-store.ts  connection-store.ts  macro-store.ts  mmkv-storage.ts
crates/omnistate-a11y/: Cargo.toml
crates/omnistate-a11y/src/: android.rs  ios.rs  lib.rs  linux.rs  macos.rs  windows.rs
crates/omnistate-audio/: Cargo.toml
crates/omnistate-audio/src/: lib.rs  whisper.rs
crates/omnistate-capture/: Cargo.toml
crates/omnistate-capture/src/: android.rs  ios.rs  lib.rs  linux.rs  macos.rs  windows.rs
crates/omnistate-core/: Cargo.toml
crates/omnistate-core/src/: error.rs  lib.rs  types.rs
crates/omnistate-input/: Cargo.toml
crates/omnistate-input/src/: android.rs  ios.rs  lib.rs  linux.rs  macos.rs  windows.rs
crates/omnistate-napi/: Cargo.toml
crates/omnistate-napi/src/: a11y.rs  audio.rs  capture.rs  input.rs  keychain.rs  lib.rs  screen.rs  stream.rs  tcc.rs
crates/omnistate-screen/: Cargo.toml
crates/omnistate-screen/src/: android.rs  ios.rs  lib.rs  linux.rs  macos.rs  windows.rs
docs/: ARCHITECTURE.md  STATUS.md  VOICE.md  intent-gap-analysis.md  plan.md  usecases-50.md  vietnamese-nlp-research.md
docs/audits/: AUDIT_INDEX_2026-04-13.md  AUDIT_ISSUES_FOUND.txt  AUDIT_QUICK_REFERENCE.txt  AUDIT_QUICK_REFERENCE_2026-04-13.md  AUDIT_README.md  COMPLETE_AUDIT_2026-04-13.md  DOMAIN_B_AUDIT.md  README.md  USE_CASE_AUDIT.csv  USE_CASE_AUDIT.md  USE_CASE_AUDIT_DETAILED.md
docs/vi/: 00-TAM-NHIN.md  01-TONG-QUAN-KIEN-TRUC.md  02-GATEWAY-LOI.md  03-BO-LAP-KE-HOACH.md  04-CAC-TANG-THUC-THI.md  05-VONG-LAP-AGENT.md  06-DONG-CO-THI-GIAC.md  07-GIAM-SAT-SUC-KHOE.md  08-PHIEN-VA-TRANG-THAI.md  09-HE-THONG-PLUGIN.md  10-MO-HINH-BAO-MAT.md  11-DIEU-KHIEN-TU-XA.md  12-CONG-NGHE-VA-TRIEN-KHAI.md  13-KE-THUA-TU-OPENCLAW.md  14-USECASE-MATRIX.md  15-MO-HINH-DU-LIEU.md  16-HOP-DONG-API.md  17-RUNBOOK.md  18-CHIEN-LUOC-KIEM-THU.md  19-DONG-GOP.md  20-WAKE-WORD-SIRI.md  README.md
docs/vi/20-NHAT-KY-QUYET-DINH/: 0001-chon-rust-cho-tang-sau.md  0002-sqlite-cho-state-persistence.md  0003-pino-thay-console.md  README.md  TEMPLATE.md
e2e/: README.md  browser-automation.spec.ts  voice-flow.spec.ts
examples/: bench.ts  demo-full-pipeline.ts  demo-safari-search.ts  demo-system-check.ts
scripts/: app-config.mjs  build-usecase-matrix.mjs  e2e-pages-check.mjs  edge_tts.py  run-all.mjs  setup-voice-python.sh  smoke-voice.sh  usecase-report.mjs  whisper_server.py
scripts/__tests__/: build-usecase-matrix.test.mjs
scripts/config/: app-config.mjs
scripts/dev/: run-all.mjs
scripts/voice/: requirements.txt  speechbrain_voiceprint.py  start_voiceprint.sh  train_personal_wake.py  voice_embed.py  voiceprint_service.py  wake_listener.py  wake_listener_personal.py  wake_listener_porcupine.py  whisper_server.py
test-data/vi/: app-control-100.json  app-launch-100.json  complex-100.json  file-operation-100.json  media-audio-100.json  network-hardware-100.json  system-query-100.json  vietnamese-intent-700.json
test-data/voice/: enrollment-phrases.json  test-scenarios.json
(+9 files in other folders)
