[workspace]
members = [
    "crates/omnistate-core",
    "crates/omnistate-screen",
    "crates/omnistate-input",
    "crates/omnistate-a11y",
    "crates/omnistate-napi",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/ngochoa203/omnistate"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
image = "0.25"
