[package]
name = "omnistate-audio"
description = "Native audio processing — Whisper STT via whisper.cpp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
omnistate-core = { path = "../omnistate-core" }
whisper-rs = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
