[package]
name = "omnistate-input"
description = "Cross-platform mouse and keyboard control"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
omnistate-core = { path = "../omnistate-core" }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
core-foundation = "0.10"
