[package]
name = "omnistate-input"
description = "Cross-platform mouse and keyboard control"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
omnistate-core = { path = "../omnistate-core" }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = { version = "0.24", features = ["highsierra"] }
core-foundation = "0.10"

# [target.'cfg(target_os = "windows")'.dependencies]
# windows = { version = "0.58", features = [
#     "Win32_UI_Input_KeyboardAndMouse",
#     "Win32_Foundation",
# ]}

# [target.'cfg(target_os = "linux")'.dependencies]
# x11rb = { version = "0.13", features = ["xtest"] }
# reis = "0.2"  # libei for Wayland input emulation

# iOS/Android: remote protocols via std::process::Command (no native deps)
