[package]
name = "omnistate-screen"
description = "Cross-platform screen capture with GPU framebuffer support"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
omnistate-core = { path = "../omnistate-core" }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
core-foundation = "0.10"

# [target.'cfg(target_os = "windows")'.dependencies]
# windows = { version = "0.58", features = [
#     "Win32_Graphics_Dxgi", "Win32_Graphics_Dxgi_Common",
#     "Win32_Graphics_Direct3D11", "Win32_Graphics_Gdi",
#     "Win32_Foundation", "Win32_UI_WindowsAndMessaging",
# ]}

# [target.'cfg(target_os = "linux")'.dependencies]
# pipewire = "0.8"
# x11rb = { version = "0.13", features = ["shm"] }
# wayland-client = "0.31"

# iOS/Android: remote protocols via std::process::Command (no native deps)
